# Rock-paper-crossblades

./: CMakeLists.txt  README.md
include/: controls.hpp  reference.hpp  square.hpp
src/: controls.cpp  main.cpp  square.cpp
